refactor: simple improvements and cleanup for different sorts